Fixed image overflow on main

--- a/styling.css
+++ b/styling.css
@@ -18,13 +18,13 @@ div.formcenters {
 
 
 .float-child1 {
-    width: 90%;
+    width: 87%;
     height: 56px;
     float: left;
     padding: 5px;
 }
 .float-child2 {
-    width: 3%;
+    width: 5%;
     height: 60px;
     float: left;
     padding: 3px;
@@ -73,15 +73,15 @@ th, td {
 
 .column {
 
-    margin-left: 1.5%;
-    margin-right: 1.5%;
+    margin: 1.5%;
+    overflow:hidden;
     text-align: center;
-    border: 2px solid black;
+    border: 1px solid black;
     border-radius: 10px;
     background-color: #c4ffa1;
   }
   
 .icon {
-    border-radius: 8px;
+    border-radius: 9px;
     border: 1px solid black;
 }
